version/0.19/_sources/api/solver/_autosummary/settings/moving_mesh_axis_direction.rst.txt
:orphan:

.. _moving_mesh_axis_direction:

moving_mesh_axis_direction
==========================

.. autoclass:: ansys.fluent.core.solver.settings_241.moving_mesh_axis_direction.moving_mesh_axis_direction
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

==================================   =======================

Parent                                               Summary

==================================   =======================
:ref:`mesh_motion <mesh_motion_1>`       Help not available.

==================================   =======================

